# MorningRing

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: main.yml
main/: CMakeLists.txt  MorningRing.cpp  idf_component.yml
main/api/: api_register.hpp  light_api.cpp  restful.cpp  restful.hpp  system_api.cpp
main/light/: SPI_ws2812.cpp  SPI_ws2812.hpp  common.hpp  common_modes.cpp  common_modes.hpp  light.cpp  light.hpp  mode.cpp  mode.hpp
main/light/modes/: common_modes.hpp
main/network/: mdns.cpp  network.h  network.hpp  sntp.cpp  wifi.cpp
main/system/: info.cpp  info.hpp  system.cpp  system.hpp
main/utils/: ArduinoJson-v6.20.0.hpp  SPI_ws2812.c  SPI_ws2812.h  config.cpp  config.hpp  fast_hsv2rgb.h  fast_hsv2rgb_8bit.c  global.hpp.in  system_config.cpp  system_config.hpp
